# hands-on-api-sdk

./: README.md  main.py  pyproject.toml
src/swcpy/: swc_client.py  swc_config.py
src/swcpy/schemas/: schemas.py
tests/: README.md  conftest.py  test_integration.py  test_runner.py  test_swc_client.py  test_swc_config.py
